[package]
name = "rs_record_link"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
songbird = { version = "0.5.0", features = ["receive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", default-features = false, features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hound = "3.5.1"
async-trait = "0.1.86"
